--- a/index.html
+++ b/index.html
@@ -1,7 +1,33 @@
 <!DOCTYPE html>
 <html>
+
+<style>
+.parallax {
+background-image: url("Background.png");
+
+min-height: 500px; 
+
+background-attachment: fixed;
+background-position: center;
+background-repeat: repeat;
+background-size: cover;
+}
+
+</style>
+
+
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<div class="parallax"></div>
+
+<div style="height:1000px;background-color:red;font-size:36px">
+Scroll Up and Down this page to see the parallax scrolling effect.
+This div is just here to enable scrolling.
+Tip: Try to remove the background-attachment property to remove the scrolling effect.
+</div>
+
 </body>
+
+
 </html>
