--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 background-image: url("Background.png");
 
 background-attachment: fixed;
-background-position: center;
 background-repeat: repeat;
-background-size: contain;
 }
 
 </style>
@@ -19,7 +17,7 @@ background-size: contain;
 
 <div class="parallax"></div>
 
-<div style="height:1000px;background-color:red;font-size:36px">
+<div style="height:1000px;background-color:rgb(0, 121, 20);font-size:36px">
 Scroll Up and Down this page to see the parallax scrolling effect.
 This div is just here to enable scrolling.
 Tip: Try to remove the background-attachment property to remove the scrolling effect.
