--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 background-image: url("Background.png");
 
 background-attachment: fixed;
+background-position: center;
 background-repeat: repeat;
+background-size: contain;
 }
 
 </style>
