--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 .parallax {
 background-image: url("Background.png");
 
+min-height: 500px;
+
 background-attachment: fixed;
 background-position: center;
 background-repeat: repeat;
