--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@ background-size: contain;
 
 
 <body>
-<h1>Hello World</h1>
+<h1>MK473203's website</h1>
 
 <div class="parallax"></div>
 
 <div style="height:1000px;background-color:rgb(0, 121, 20);font-size:36px">
-Scroll Up and Down this page to see the parallax scrolling effect.
-This div is just here to enable scrolling.
-Tip: Try to remove the background-attachment property to remove the scrolling effect.
+	Parallax
 </div>
 
 </body>
