--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ min-height: 500px;
 background-attachment: fixed;
 background-position: center;
 background-repeat: repeat;
-background-size: contain;
+background-size: 30px;
 }
 
 </style>
