--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ background-attachment: fixed;
 background-position: center;
 background-repeat: repeat;
 background-size: 30px;
+image-rendering: pixelated;
 }
 
 </style>
