--- a/index.html
+++ b/index.html
@@ -1,32 +1,52 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>MK473203</title>	
+		<style>
+			body, html {
+				margin: 0;
+				height: 100%;
+			}
+		
+			.amongi1, .amongi2 {
+			background-image: url("Background.png");
+		
+			background-attachment: fixed;
+			background-repeat: repeat;
+			background-size: 10%;
+			image-rendering: pixelated;
+			}
 
-<style>
-.parallax {
-background-image: url("Background.png");
+			.amongi1 {
+				height: 50%;
+			}
 
-min-height: 500px;
+			.amongi2 {
+				height: 100%;
+			}
 
-background-attachment: fixed;
-background-position: center;
-background-repeat: repeat;
-background-size: 30px;
-image-rendering: pixelated;
-}
+			.middletext {
+				height: 100px;
+				background-color: rgb(0, 121, 20);
+				font-size: 72px;
+				text-align: center;
+			}
 
-</style>
+			</style>
+	</head>
 
 
-<body>
-<h1>MK473203's website</h1>
+	<body>
 
-<div class="parallax"></div>
+		<div class="amongi1"></div>
 
-<div style="height:1000px;background-color:rgb(0, 121, 20);font-size:36px">
-	Parallax
-</div>
+		<div class="middletext">
+			Hello
+		</div>
 
-</body>
+		<div class="amongi2"></div>
+
+	</body>
 
 
 </html>
