--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>MK473203</title>	
+		<link rel="icon" href="icon.ico" sizes="128x128">
 		<style>
 			body, html {
 				margin: 0;
