--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>MK473203</title>	
-		<link rel="icon" href="icon.ico" sizes="128x128">
+		<link rel="icon" href="icon.ico">
 		<style>
 			body, html {
 				margin: 0;
@@ -28,9 +28,26 @@
 
 			.middletext {
 				height: 100px;
-				background-color: rgb(0, 121, 20);
+				background-color: #000000;
+				color: #FFFFFF;
 				font-size: 72px;
 				text-align: center;
+			}
+
+			.fractal1 {
+				background-image: url("Fractal1.png");
+				background-position: center;
+				background-attachment: fixed;
+				background-size: cover;
+				height: 100%;
+			}
+
+			.fractal2 {
+				background-image: url("Fractal2.png");
+				background-position: center;
+				background-attachment: fixed;
+				background-size: cover;
+				height: 100%;
 			}
 
 			</style>
@@ -39,11 +56,15 @@
 
 	<body>
 
-		<div class="amongi1"></div>
+		<div class="fractal1">
 
-		<div class="middletext">
-			Hello
+			<div>
+				
+			</div>
+
 		</div>
+
+		<div class="fractal2"></div>
 
 		<div class="amongi2"></div>
 
